scrollbar color correction

--- a/mundial/scrollbar.css
+++ b/mundial/scrollbar.css
@@ -1,3 +1,9 @@
+:root {
+  --color1: #9a1032;
+  --darkcolor1: #700b24;
+}
+
+
 /* width */
 ::-webkit-scrollbar {
     width: 8px;
@@ -11,11 +17,11 @@
    
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    background: #a52a2a; 
+    background: var(--color1); 
     border-radius: 10px;
   }
   
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    background: #882222; 
+    background: var(--darkcolor1); 
   }
